# django2fa

./: LICENSE  README.md  pyproject.toml
django_admin_2fa/: __init__.py  admin.py  apps.py  conf.py  decorators.py  middleware.py  models.py  urls.py  utils.py  views.py
django_admin_2fa/migrations/: 0001_initial.py
django_admin_2fa/static/admin_2fa/css/: admin_2fa.css
django_admin_2fa/templates/admin_2fa/: backup_codes.html  base.html  manage.html  setup.html  verify.html
tests/: settings.py  test_middleware.py  test_models.py  test_utils.py  test_views.py  urls.py
